--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,20 @@
 			<artifactId>com.ibm.mq.allclient</artifactId>
 			<version>9.1.5.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core -->
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-matchers -->
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-matchers</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -74,6 +88,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 
 </project>
